--- a/www/partials/passengerInfo.html
+++ b/www/partials/passengerInfo.html
@@ -608,6 +608,6 @@
           </form>
         </div>
       </div>
-      <link href="css/passenger-info.css" rel="stylesheet">
+      <!-- <link href="css/passenger-info.css" rel="stylesheet"> -->
     </ion-content>
  </ion-view>
