--- a/www/partials/payment.html
+++ b/www/partials/payment.html
@@ -65,7 +65,7 @@
         <button class="confirm hvr-pulse" ng-click="SubmitPayment()"><i class="fa fa-lock"></i> confirm</button>
       </form>
     </div>
-    <link href="css/payment.css" rel="stylesheet">
+    <!-- <link href="css/payment.css" rel="stylesheet"> -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     <script src="js/payment.js"></script>
