fixed NaN price in the UI of selecting flights

--- a/public/css/landing-new.css
+++ b/public/css/landing-new.css
@@ -477,7 +477,7 @@
   transition-property: color, background-color;
 }
 .hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
-  background-color: #bd6772;
+  background-color: #01426a;
   color: white;
 }
 .class{
