--- a/public/views/flights-new.html
+++ b/public/views/flights-new.html
@@ -33,7 +33,7 @@
           </td>
           <td>
             <fieldset >
-              <input type="radio" class="class" id="outgoing{{$index}}" name="outgoingCost" ng-model="$parent.selectedOutgoing" ng-value="{{$index}}"/>
+              <input type="radio" ng-click="selectFlight()" class="class" id="outgoing{{$index}}" name="outgoingCost" ng-model="$parent.selectedOutgoing" ng-value="{{$index}}"/>
               <label for="outgoing{{$index}}">{{outgoingFlight.cost}} {{outgoingFlight.currency}}</label>
             </fieldset>
           </td>
@@ -75,7 +75,7 @@
           </td>
           <td>
             <fieldset >
-              <input type="radio" class="class"  id="return{{$index}}" name="returnCost" ng-model="$parent.selectedReturn" ng-value="{{$index}}"/>
+              <input type="radio" class="class" ng-click="selectFlight()" id="return{{$index}}" name="returnCost" ng-model="$parent.selectedReturn" ng-value="{{$index}}"/>
               <label for="return{{$index}}">{{returnFlight.cost}} {{returnFlight.currency}}</label>
             </fieldset>
           </td>
@@ -91,8 +91,7 @@
 
   <div class="plan">
     <h3>Shopping Cart
-      <span ng-hide="oneWay">${{parseInt(outgoingFlights[selectedOutgoing].cost) + parseInt(returnFlights[selectedReturn].cost)}}</span>
-      <span ng-hide="!oneWay">${{outgoingFlights[selectedOutgoing].cost}}</span>
+      <span>${{price}}</span>
     </h3>
     <table class="table table-hover">
       <tbody>
